--- a/public_html/index.html
+++ b/public_html/index.html
@@ -56,7 +56,7 @@
     <header class="header" id="home">
         <div class="container">
             <div class="infos">
-                <h6 class="subtitle">Olá, Sou o</h6>
+                <h6 class="subtitle">Olá, Eu sou</h6>
                 <h6 class="title">Brenno Alencar</h6>
                 <p class="header-title-dois">I'm a software Engineer</p>
 
@@ -88,15 +88,15 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Brenno Alencar</h6>
-                    <p class="subtitle">Developer Front-End</p>
-                    <p>Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js, JavaScript, Git,
+                    <p class="subtitle">I'm a software Engineer</p>
+                    <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js, JavaScript, Git,
                         Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
                         minhas habilidades para entregar soluções de alta qualidade.</p>
-                    <p>Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de desenvolvimento
+                    <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de desenvolvimento
                         para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem escrito
                         para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
                         Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
-                        aprender com meus colegas para contribuir para o crescimento coletivo..</p>
+                        aprender com meus colegas para contribuir para o crescimento coletivo.</p>
                     <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>
                 </div>
             </div>
