--- a/public_html/index.html
+++ b/public_html/index.html
@@ -58,7 +58,9 @@
             <div class="infos">
                 <h6 class="subtitle">Olá, Eu sou</h6>
                 <h6 class="title">Brenno Alencar</h6>
-                <p class="header-title-dois">I'm a software Engineer</p>
+                <div class="marquee-container">
+                    <p id="marquee-text" class="header-title-dois"></p>
+                </div>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">Me Contrate!</button>
@@ -353,6 +355,7 @@
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="./assets/js/letreiro.js"></script>
 
     <!-- steller js -->
     <script src="assets/js/steller.js"></script>
