--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/steller.css">
 </head>
 
@@ -91,10 +92,12 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Brenno Alencar</h6>
                     <p class="subtitle">I'm a software Engineer</p>
-                    <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js, JavaScript, Git,
+                    <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
+                        JavaScript, Git,
                         Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
                         minhas habilidades para entregar soluções de alta qualidade.</p>
-                    <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de desenvolvimento
+                    <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de
+                        desenvolvimento
                         para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem escrito
                         para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
                         Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
@@ -109,9 +112,7 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Certificados</h6>
-            <h6 class="section-title mb-4">What I Do</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Esses certificados refletem meu compromisso com a excelência em minha profissão. Estou sempre em busca <br> de novos conhecimentos e habilidades para oferecer o melhor serviço possível.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
@@ -164,6 +165,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-desktop"></i>
+                            <h5>Git</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-desktop"></i>
+                            <h5>Git</h5>
+                        </div>
+                    </div>
+                </div>
     </section>
     <!-- End of Sectoin -->
 
@@ -171,7 +189,6 @@
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
-            <h6 class="section-title mb-4">Check My Wonderful Works</h6>
             <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
                 rerum commodi corrupti, temporibus non quam.</p>
 
@@ -248,25 +265,6 @@
     </section>
     <!-- End of portfolio section -->
 
-    <!-- Hire me section -->
-    <section class="bg-gray p-0 section">
-        <div class="container">
-            <div class="card bg-primary">
-                <div class="card-body text-light">
-                    <div class="row align-items-center">
-                        <div class="col-sm-9 text-center text-sm-left">
-                            <h5 class="mt-3">Hire Me For Your Project</h5>
-                            <p class="mb-3">Accusantium labore nostrum similique quisquam.</p>
-                        </div>
-                        <div class="col-sm-3 text-center text-sm-right">
-                            <button class="btn btn-light rounded">Hire Me!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End od Hire me section. -->
 
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
@@ -320,9 +318,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="map">
-            <iframe src="https://snazzymaps.com/embed/61257"></iframe>
         </div>
     </section>
     <!-- End of Contact Section -->
