Adicionei os icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Bootstrap + Steller main styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/steller.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -69,10 +71,12 @@
                 </div>
 
                 <div class="socials mt-4">
-                    <a id="teste-icon" class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a class="social-item" href="https://www.linkedin.com/in/brenno-alencar-955460256/"
+                        target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank"><i
+                            class="fa-brands fa-github"></i></a>
+                    <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
             <div class="img-holder">
@@ -112,75 +116,90 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Certificados</h6>
-            <p class="mb-5 pb-4">Esses certificados refletem meu compromisso com a excelência em minha profissão. Estou sempre em busca <br> de novos conhecimentos e habilidades para oferecer o melhor serviço possível.</p>
+            <p class="mb-5 pb-4">Esses certificados refletem meu compromisso com a excelência em minha profissão. Estou
+                sempre em busca <br> de novos conhecimentos e habilidades para oferecer o melhor serviço possível.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-crown"></i>
-                            <h5>JavaScript</h5>
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-js"></i>
+                                <h5 class="card-title-icon">JavaScript</h5>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-desktop"></i>
-                            <h5>React.js</h5>
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-react"></i>
+                                <h5 class="card-title-icon">React.js</h5>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-mobile"></i>
-                            <h5>Node.js</h5>
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-node"></i>
+                                <h5 class="card-title-icon">Node.js</h5>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-bar-chart"></i>
-                            <h5>HTML</h5>
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-html5"></i>
+                                <h5 class="card-title-icon">HTML</h5>
+                            </div>
                         </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-css3"></i>
+                                <h5 class="card-title-icon">CSS</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-square-js"></i>
+                                <h5 class="card-title-icon">Logica de programaçao js</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-git-alt"></i>
+                                <h5 class="card-title-icon">Git</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
-                    </div>
-
-                </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-crown"></i>
-                            <h5>CSS</h5>
+                    <a href="">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fa-brands fa-github"></i>
+                                <h5 class="card-title-icon">GitHub</h5>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-desktop"></i>
-                            <h5>Git</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-desktop"></i>
-                            <h5>Git</h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <i class="icon ti-desktop"></i>
-                            <h5>Git</h5>
-                        </div>
-                    </div>
+                    </a>
                 </div>
     </section>
     <!-- End of Sectoin -->
@@ -334,10 +353,12 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                        <a class="social-item" href="https://www.linkedin.com/in/brenno-alencar-955460256/"
+                            target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
