--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     <!-- Service section -->
     <section id="service" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Certificados</h6>
+            <h6 class="subtitle sub-secundario">Certificados</h6>
             <p class="mb-5 pb-4">Esses certificados refletem meu compromisso com a excelência em minha profissão. Estou
                 sempre em busca <br> de novos conhecimentos e habilidades para oferecer o melhor serviço possível.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-js"></i>
@@ -131,7 +131,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/6b4a6782-6a66-4ea4-80b1-eeb7fdb02f96?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-react"></i>
@@ -141,7 +141,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/b95e2437-a098-4255-a443-be1351e730ee?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-node"></i>
@@ -151,7 +151,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/51344ec4-1bb0-4973-ab2d-431820808a0e?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-html5"></i>
@@ -161,7 +161,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/e07572b4-3579-4a72-8ed0-82dd7e983c08?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-css3"></i>
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/21c40a84-d030-482a-b903-0318f9a60fce?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-square-js"></i>
@@ -181,7 +181,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/9abec107-6763-41a7-8c57-15b732bbc82a?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-git-alt"></i>
@@ -192,7 +192,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="">
+                    <a class="card-link" href="">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-github"></i>
