--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-square-js"></i>
-                                <h5 class="card-title-icon">Logica de programaçao js</h5>
+                                <h5 class="card-title-icon">Lógica de programação</h5>
                             </div>
                         </div>
                     </a>
