--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <a class="card-link" href="">
                         <div class="custom-card card border">
                             <div class="card-body">
-                                <i class="fa-brands fa-github"></i>
+                                <i class="fa-brands fa-bootstrap"></i>
                                 <h5 class="card-title-icon">GitHub</h5>
                             </div>
                         </div>
@@ -207,9 +207,8 @@
     <!-- Portfolio section -->
     <section id="portfolio" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Portfolio</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="subtitle">Portfólio</h6>
+            <p class="mb-5 pb-4">Aqui estão alguns dos projetos que desenvolvi e trabalhei em meu GitHub. Explore as soluções e inovações que implementei, e descubra como eles podem ser úteis para suas necessidades.</p>
 
             <div class="row">
                 <div class="col-sm-4">
@@ -288,7 +287,7 @@
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
         <div class="container text-center">
-            <h6 class="subtitle">Contact</h6>
+            <h6 class="subtitle">Contato</h6>
             <h6 class="section-title mb-4">Get In Touch With Me</h6>
             <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
                 rerum commodi corrupti, temporibus non quam.</p>
@@ -310,7 +309,8 @@
                             <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
                                 placeholder="Message"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block rounded w-lg">Send Message</button>
+                        <button type="submit" class="btn btn-primary btn-block rounded w-lg">
+                            enviar mensagem</button>
                     </form>
                 </div>
                 <div class="contact-infos">
@@ -348,7 +348,7 @@
                 <div class="col-sm-6">
                     <p>Copyright
                         <script>document.write(new Date().getFullYear())</script> &copy; <a
-                            href="http://www.devcrud.com" target="_blank">DevCRUD</a>
+                            href="http://www.devcrud.com" target="_blank">Brenno Alencar</a>
                     </p>
                 </div>
                 <div class="col-sm-6">
