--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="col-sm-6">
                     <p>Copyright
                         <script>document.write(new Date().getFullYear())</script> &copy; <a
-                            href="http://www.devcrud.com" target="_blank">Brenno Alencar</a>
+                            href="https://github.com/BrennoAlenkar" target="_blank">Brenno Alencar</a>
                     </p>
                 </div>
                 <div class="col-sm-6">
