--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class="- btn btn-primary rounded ml-4" href="#">Fale Comigo</a>
+                        <a class="- btn btn-primary rounded ml-4"
+                            href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F"
+                            target="_blank">Fale Comigo</a>
                     </li>
                 </ul>
             </div>
@@ -75,8 +77,8 @@
                         target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank"><i
                             class="fa-brands fa-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
             <div class="img-holder">
@@ -131,7 +133,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/6b4a6782-6a66-4ea4-80b1-eeb7fdb02f96?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/6b4a6782-6a66-4ea4-80b1-eeb7fdb02f96?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-react"></i>
@@ -141,7 +145,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/b95e2437-a098-4255-a443-be1351e730ee?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/b95e2437-a098-4255-a443-be1351e730ee?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-node"></i>
@@ -151,7 +157,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/51344ec4-1bb0-4973-ab2d-431820808a0e?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/51344ec4-1bb0-4973-ab2d-431820808a0e?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-html5"></i>
@@ -161,7 +169,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/e07572b4-3579-4a72-8ed0-82dd7e983c08?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/e07572b4-3579-4a72-8ed0-82dd7e983c08?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-css3"></i>
@@ -171,7 +181,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/21c40a84-d030-482a-b903-0318f9a60fce?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/21c40a84-d030-482a-b903-0318f9a60fce?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-square-js"></i>
@@ -181,7 +193,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/9abec107-6763-41a7-8c57-15b732bbc82a?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/9abec107-6763-41a7-8c57-15b732bbc82a?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-git-alt"></i>
@@ -208,7 +222,8 @@
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Portfólio</h6>
-            <p class="mb-5 pb-4">Aqui estão alguns dos projetos que desenvolvi e trabalhei em meu GitHub. Explore as soluções e inovações que implementei, e descubra como eles podem ser úteis para suas necessidades.</p>
+            <p class="mb-5 pb-4">Aqui estão alguns dos projetos que desenvolvi e trabalhei em meu GitHub. Explore as
+                soluções e inovações que implementei, e descubra como eles podem ser úteis para suas necessidades.</p>
 
             <div class="row">
                 <div class="col-sm-4">
@@ -357,8 +372,8 @@
                             target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
