--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="buttons pt-3">
-                    <button class="btn btn-primary rounded">Me Contrate!</button>
+                    <a href="brennoalencar79@gamil.com" target="_blank"><button class="btn btn-primary rounded">Me Contrate!</button></a>
                     <button class="btn btn-dark rounded">DOWNLOAD CV</button>
                 </div>
 
@@ -97,7 +97,7 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Brenno Alencar</h6>
-                    <p class="subtitle">I'm a software Engineer</p>
+                    <p class="subtitle">desenvolvedor Front-End</p>
                     <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
                         JavaScript, Git,
                         Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
@@ -303,51 +303,49 @@
     <section id="contact" class="position-relative section">
         <div class="container text-center">
             <h6 class="subtitle">Contato</h6>
-            <h6 class="section-title mb-4">Get In Touch With Me</h6>
             <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
                 rerum commodi corrupti, temporibus non quam.</p>
 
             <div class="contact text-left">
                 <div class="form">
-                    <h6 class="subtitle">Available 24/7</h6>
+                    <h6 id="sub-title" class="subtitle">E-mail</h6>
                     <h6 class="section-title mb-4">Get In Touch</h6>
                     <form>
                         <div class="form-group">
                             <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Enter email" required>
+                                aria-describedby="emailHelp" placeholder="Digite o e-mail" required>
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" id="exampleInputPassword1"
-                                placeholder="Password" required>
+                                placeholder="Senha" required>
                         </div>
                         <div class="form-group">
                             <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
-                                placeholder="Message"></textarea>
+                                placeholder="mensagem"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block rounded w-lg">
-                            enviar mensagem</button>
+                        <button type="submit" class="btn btn-primary btn-block rounded w-lg">Enviar mensagem</button>
                     </form>
                 </div>
                 <div class="contact-infos">
                     <div class="item">
                         <i class="ti-location-pin"></i>
                         <div class="">
-                            <h5>Location</h5>
-                            <p> 12345 Fake ST NoWhere AB Country</p>
+                            <h5 class="contact-texts">Location</h5>
+                            <p class="contact-texts">Goiania</p>
                         </div>
                     </div>
                     <div class="item">
                         <i class="ti-mobile"></i>
                         <div>
-                            <h5>Phone Number</h5>
-                            <p>(123) 456-7890</p>
+                            <h5 class="contact-texts">Telefone</h5>
+                            <p class="contact-texts">62-993002421</p>
                         </div>
                     </div>
                     <div class="item">
                         <i class="ti-email"></i>
                         <div class="mb-0">
-                            <h5>Email Address</h5>
-                            <p>info@website.com</p>
+                            <h5 class="contact-texts">E-mail</h5>
+                            <p class="contact-texts">brennoalenkkar@icloud.com</p>
                         </div>
                     </div>
                 </div>
