--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
         <div class="container text-center">
-            <h6 class="subtitle">Contato</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="subtitle sub-title">Contato</h6>
+            <p class="mb-5 pb-4">
+                Vamos Conversar!
+                Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail,<br> Estou à disposição!</p>
 
             <div class="contact text-left">
                 <div class="form">
