--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 </div>
 
                 <div class="buttons pt-3">
-                    <a href="brennoalencar79@gamil.com" target="_blank"><button class="btn btn-primary rounded">Me Contrate!</button></a>
+                    <a href="brennoalencar79@gamil.com" target="_blank"><button class="btn btn-primary rounded">Me
+                            Contrate!</button></a>
                     <button class="btn btn-dark rounded">DOWNLOAD CV</button>
                 </div>
 
@@ -77,8 +78,10 @@
                         target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank"><i
                             class="fa-brands fa-github"></i></a>
-                    <a class="social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F"
+                        target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank"><i
+                            class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
             <div class="img-holder">
@@ -97,7 +100,7 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Brenno Alencar</h6>
-                    <p class="subtitle">desenvolvedor Front-End</p>
+                    <p class="subtitle sub-title-zero">desenvolvedor Front-End</p>
                     <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
                         JavaScript, Git,
                         Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
@@ -204,13 +207,12 @@
                         </div>
                     </a>
                 </div>
-
                 <div class="col-sm-6 col-md-3 mb-4">
                     <a class="card-link" href="">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-bootstrap"></i>
-                                <h5 class="card-title-icon">GitHub</h5>
+                                <h5 class="card-title-icon">Bootstrap</h5>
                             </div>
                         </div>
                     </a>
@@ -221,9 +223,9 @@
     <!-- Portfolio section -->
     <section id="portfolio" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">Portfólio</h6>
-            <p class="mb-5 pb-4">Aqui estão alguns dos projetos que desenvolvi e trabalhei em meu GitHub. Explore as
-                soluções e inovações que implementei, e descubra como eles podem ser úteis para suas necessidades.</p>
+            <h6 class="subtitle sub-title-one">Portfólio</h6>
+            <p class="mb-5 pb-4">Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
+                inovações <br> que implementei e descubra como elas podem agregar valor às suas necessidades.</p>
 
             <div class="row">
                 <div class="col-sm-4">
@@ -317,8 +319,8 @@
                                 aria-describedby="emailHelp" placeholder="Digite o e-mail" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="exampleInputPassword1"
-                                placeholder="Senha" required>
+                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha"
+                                required>
                         </div>
                         <div class="form-group">
                             <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
@@ -371,8 +373,11 @@
                             target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
-                        <a class="social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-item"
+                            href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F"
+                            target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
