--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="https://certificadojs.vercel.app/" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-js"></i>
