Imagem icon adicionada

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Site de Portfolio de Brenno Alencar.">
     <meta name="author" content="Brenno Alencar">
+    <link rel="shortcut icon" href="assets/imgs/icon.png" type="image/x-icon">
     <title>Brenno Alencar | Portfólio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
