link para o e-mail

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 </div>
 
                 <div class="buttons pt-3">
-                    <a href="brennoalencar79@gamil.com" target="_blank"><button class="btn btn-primary rounded">Me
-                            Contrate!</button></a>
+                    <a href="mailto:brennoalenkkar@icloud.com" target="_blank"><button class="btn btn-primary rounded">Me Contrate!</button></a>
                     <button class="btn btn-dark rounded">DOWNLOAD CV</button>
                 </div>
 
