--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="#service">Certificados</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfólio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contato</a>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Brenno Alencar</h6>
-                    <p class="subtitle sub-title-zero">desenvolvedor Front-End</p>
+                    <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
                     <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
                         JavaScript, Git,
                         Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
