--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <div class="buttons pt-3">
                     <a href="mailto:brennoalenkkar@icloud.com" target="_blank"><button class="btn btn-primary rounded">Me Contrate!</button></a>
-                    <button class="btn btn-dark rounded">DOWNLOAD CV</button>
+                    <a href="curriculo/Curriculo.pdf" download class="btn btn-dark rounded">DOWNLOAD CV</a>
                 </div>
 
                 <div class="socials mt-4">
@@ -111,7 +111,7 @@
                         para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
                         Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
                         aprender com meus colegas para contribuir para o crescimento coletivo.</p>
-                    <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>
+                     <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
                 </div>
             </div>
         </div>
