--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 </div>
 
                 <div class="buttons pt-3">
-                    <a href="mailto:brennoalenkkar@icloud.com" target="_blank"><button class="btn btn-primary rounded">Me Contrate!</button></a>
+                    <a href="mailto:brennoalenkkar@icloud.com" target="_blank"><button
+                            class="btn btn-primary rounded">Me Contrate!</button></a>
                     <a href="curriculo/Curriculo.pdf" download class="btn btn-dark rounded">DOWNLOAD CV</a>
                 </div>
 
@@ -111,7 +112,7 @@
                         para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
                         Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
                         aprender com meus colegas para contribuir para o crescimento coletivo.</p>
-                     <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
+                    <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
                 </div>
             </div>
         </div>
@@ -121,8 +122,7 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle sub-secundario">Certificados</h6>
-            <p class="mb-5 pb-4">Esses certificados refletem meu compromisso com a excelência em minha profissão. Estou
-                sempre em busca <br> de novos conhecimentos e habilidades para oferecer o melhor serviço possível.</p>
+            <p class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência profissional. Estou sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível. Abaixo, compartilho alguns dos meus certificados mais recentes.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
@@ -208,7 +208,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/57d6f065-9976-448d-b86f-aa7a12bdb096?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-bootstrap"></i>
@@ -306,25 +306,26 @@
         <div class="container text-center">
             <h6 class="subtitle sub-title">Contato</h6>
             <p class="mb-5 pb-4">
-                Vamos Conversar!
-                Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail,<br> Estou à disposição!</p>
-
+                <Strong>Vamos conversar!</Strong><br>
+                Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail, estou à disposição!
+            </p>
+    
             <div class="contact text-left">
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">E-mail</h6>
-                    <h6 class="section-title mb-4">Get In Touch</h6>
+                    <h6 class="section-title mb-4">Fale Conosco</h6>
                     <form>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Digite o e-mail" required>
+                            <label class="contact-label" for="email">E-mail</label>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha"
-                                required>
+                            <label class="contact-label" for="name">Nome</label>
+                            <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required>
                         </div>
                         <div class="form-group">
-                            <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
-                                placeholder="mensagem"></textarea>
+                            <label class="contact-label" for="message">Mensagem</label>
+                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block rounded w-lg">Enviar mensagem</button>
                     </form>
@@ -332,9 +333,9 @@
                 <div class="contact-infos">
                     <div class="item">
                         <i class="ti-location-pin"></i>
-                        <div class="">
-                            <h5 class="contact-texts">Location</h5>
-                            <p class="contact-texts">Goiania</p>
+                        <div>
+                            <h5 class="contact-texts">Localização</h5>
+                            <p class="contact-texts">Goiânia</p>
                         </div>
                     </div>
                     <div class="item">
@@ -363,7 +364,7 @@
             <div class="row align-items-center">
                 <div class="col-sm-6">
                     <p>Copyright
-                        <script>document.write(new Date().getFullYear())</script> &copy; <a
+                        <script>document.write(new Date().getFullYear())</script> &copy; <a class="footekr-lin"
                             href="https://github.com/BrennoAlenkar" target="_blank">Brenno Alencar</a>
                     </p>
                 </div>
