--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">E-mail</h6>
                     <h6 class="section-title mb-4">Fale Conosco</h6>
-                    <form action="https://formsubmit.co/brennoalenkkar@icloud.com" target="_blank" method="post">
+                    <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="post">
                         <div class="form-group">
                             <label class="contact-label" for="email">E-mail</label>
                             <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
