--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">E-mail</h6>
                     <h6 class="section-title mb-4">Fale Conosco</h6>
-                    <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="post">
+                    <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="POST">
                         <div class="form-group">
                             <label class="contact-label" for="name">Nome</label>
                             <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required>
@@ -392,6 +392,7 @@
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="./assets/js/letreiro.js"></script>
+
 
     <!-- steller js -->
     <script src="assets/js/steller.js"></script>
