--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle sub-secundario">Certificados</h6>
-            <p class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência profissional. Estou sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível. Abaixo, compartilho alguns dos meus certificados mais recentes.</p>
+            <p class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência profissional. Estou
+                sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível. Abaixo,
+                compartilho alguns dos meus certificados mais recentes.</p>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
@@ -208,7 +210,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/57d6f065-9976-448d-b86f-aa7a12bdb096?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/57d6f065-9976-448d-b86f-aa7a12bdb096?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-bootstrap"></i>
@@ -309,7 +313,7 @@
                 <Strong>Vamos conversar!</Strong><br>
                 Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail, estou à disposição!
             </p>
-    
+
             <div class="contact text-left">
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">E-mail</h6>
@@ -321,11 +325,12 @@
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="email">E-mail</label>
-                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail"required>
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="message">Mensagem</label>
-                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem" required></textarea>
+                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem"
+                                required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block rounded w-lg">Enviar mensagem</button>
                     </form>
