--- a/index.html
+++ b/index.html
@@ -309,15 +309,13 @@
     <section id="contact" class="position-relative section">
         <div class="container text-center">
             <h6 class="subtitle sub-title">Contato</h6>
-            <p class="mb-5 pb-4">
-                <Strong>Vamos conversar!</Strong><br>
+            <p class="mb-5 pb-4">Vamos conversar!
                 Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail, estou à disposição!
             </p>
 
             <div class="contact text-left">
                 <div class="form">
-                    <h6 id="sub-title" class="subtitle">E-mail</h6>
-                    <h6 class="section-title mb-4">Fale Conosco</h6>
+                    <h6 id="sub-title" class="subtitle">Fale Comigo</h6>
                     <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="POST">
                         <div class="form-group">
                             <label class="contact-label" for="name">Nome</label>
