--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://certificadojs.vercel.app/" target="_blank">
+                    <a class="card-link" href="https://cursos.alura.com.br/certificate/02633646-b53d-4b5d-8cbe-2be9b66dca78?lang=pt_BR" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-js"></i>
@@ -227,7 +227,7 @@
     <!-- Portfolio section -->
     <section id="portfolio" class="section">
         <div class="container text-center">
-            <h6 class="subtitle sub-title-one">Portfólio</h6>
+            <h6 class="subtitle sub-title-one sub-title-m6">Portfólio</h6>
             <p class="mb-5 pb-4">Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
                 inovações <br> que implementei e descubra como elas podem agregar valor às suas necessidades.</p>
 
