--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="https://cursos.alura.com.br/certificate/02633646-b53d-4b5d-8cbe-2be9b66dca78?lang=pt_BR" target="_blank">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/02633646-b53d-4b5d-8cbe-2be9b66dca78?lang=pt_BR"
+                        target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-js"></i>
@@ -248,7 +250,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
@@ -323,7 +326,8 @@
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="email">E-mail</label>
-                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail"required>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail"
+                                required>
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="message">Mensagem</label>
