--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="./assets/js/letreiro.js"></script>
+    <script src="assets/js/scrol.js"></script>
 
 
     <!-- steller js -->
