--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site de Portfolio de Brenno Alencar.">
     <meta name="author" content="Brenno Alencar">
     <link rel="shortcut icon" href="assets/imgs/icon.png" type="image/x-icon">
