--- a/index.html
+++ b/index.html
@@ -239,18 +239,17 @@
                         <img src="assets/imgs/img-eterno-principal.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
+                                <h5>L2 Eterno</h5>
                                 <a href="https://www.l2eterno.com/" target="_blank"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/avatar-2.jpg" alt="">
+                        <img src="assets/imgs/img-organo-teste.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                <a href="#" target="_blank"><i
                                         class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
@@ -269,7 +268,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-4.jpg" alt="">
+                        <img src="assets/imgs/img-organo-teste.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -284,7 +283,7 @@
                         <img src="assets/imgs/img-cardapio.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
+                                <h5>Cardapio Online</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
